objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Kit_Details__c</fullName>
        <description>This field contains the relevant t-shirt/top size for the contact in the context of a specific campaign/event (VSA-6).</description>
        <inlineHelpText>T-shirt/top size etc.</inlineHelpText>
        <label>Kit Details</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Created_by_Charity_Checkout_CC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to TRUE if the campaign member has been created via Charity Checkout. It is populated by the Charity Checkout Zapier trigger called &apos;New Event Registration (GC case #4254).</description>
        <inlineHelpText>If this checkbox is ticked, it means the campaign member has been created via Charity Checkout.</inlineHelpText>
        <label>Created by Charity Checkout (CC)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_Event_Page_Reference__c</fullName>
        <description>This field contains the event_page_reference property which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger called &apos;New Event Registration (GC case #4254).</description>
        <externalId>true</externalId>
        <label>Event Page Reference (CC)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Event_Page_URL__c</fullName>
        <description>This field contains the event_page_url property which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger called &apos;New Event Registration (GC case #4254).</description>
        <label>Event Page URL (CC)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cc_Event_Type__c</fullName>
        <description>This field contains the event_type property which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger called &apos;New Event Registration (GC case #4254).</description>
        <label>Event Type (CC)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Payment_Fields_2__c</fullName>
        <description>This field contains the paymentFields property which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger called &apos;New Event Registration (GC case #4254).</description>
        <label>Payment Fields (CC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Payment_Fields__c</fullName>
        <description>This field contains the paymentFields property which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger called &apos;New Event Registration (GC case #4254).  This replaced the 255 length field.</description>
        <label>Payment Fields (CC)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cc_Team_Reference__c</fullName>
        <description>This field contains the team_reference property which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger called &apos;New Event Registration (GC case #4254).</description>
        <externalId>true</externalId>
        <label>Team Reference (CC)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Ticket_Name__c</fullName>
        <description>This field contains the ticket_name property which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger called &apos;New Event Registration (GC case #4254).</description>
        <label>Ticket Name (CC)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_Ticket_Price__c</fullName>
        <description>This field contains the ticket_price property which is provided by Charity Checkout (CC). The field name is derived from CC&apos;s naming convention. It is populated by the Charity Checkout Zapier trigger called &apos;New Event Registration (GC case #4254).</description>
        <label>Ticket Price (CC)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>